# strot-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/strot_ai/: __init__.py  ai.py  client.py  config.py  cortex.py  decorators.py  destinations.py  pages.py  registry.py  types.py
src/strot_cli/: __init__.py  auth.py  main.py  project.py
src/strot_cli/commands/: __init__.py  deploy.py  init.py  login.py  logout.py  resources.py  test.py  whoami.py
src/strot_sdk/: __init__.py  ai.py  cortex.py  data.py  decorators.py  pages.py  registry.py  validation.py
tests/: conftest.py  test_ai.py  test_client.py  test_config.py  test_cortex.py  test_data.py  test_decorators.py  test_destinations.py  test_pages.py  test_registry.py  test_types.py  test_validation.py
