[tool.poetry]
name = "strot"
version = "0.1.1"
description = "Build tools, agents, and pipelines for your STROT instance"
authors = ["STROT AI <dev@strot.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://strot.ai"
repository = "https://github.com/strot-ai/strot-sdk"
keywords = ["strot", "ai", "agents", "pipelines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
packages = [
    { include = "strot_sdk", from = "src" },
    { include = "strot_cli", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = ">=2.28"
pyyaml = ">=6.0"
click = ">=8.0"
rich = ">=13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = "*"
responses = ">=0.23"

[tool.poetry.scripts]
strot = "strot_cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
